--- a/templates/login.html
+++ b/templates/login.html
@@ -3,11 +3,11 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="row justify-content-center">
-    <div class="col-md-6">
+<div class="row justify-content-center mt-5">
+    <div class="col-md-6 col-lg-4">
         <div class="card">
-            <div class="card-header">
-                <h4 class="text-center">Login</h4>
+            <div class="card-header text-center">
+                <h4><i class="bi bi-lock"></i> Login</h4>
             </div>
             <div class="card-body">
                 <form method="POST" action="{{ url_for('login') }}">
@@ -19,8 +19,13 @@
                         <label for="password" class="form-label">Password</label>
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
-                    <button type="submit" class="btn btn-primary w-100">Login</button>
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </div>
                 </form>
+            </div>
+            <div class="card-footer text-center">
+                <small>School Fees Management System</small>
             </div>
         </div>
     </div>
